# GTExtracor

./: .gitignore  CMakeLists.txt  README.md
src/: bboxpointsextractor.cpp  bboxpointsextractor.hpp  camera.hpp  detectionsreader.cpp  detectionsreader.hpp  main.cpp  nvmreader.cpp  nvmreader.hpp  point.hpp  pointcloud.cpp  pointcloud.hpp  pointcloudutils.cpp  pointcloudutils.hpp  positionextractor.cpp  positionextractor.hpp
